Add scaling performance probe and extend test coverage to 65536 elements
- Add scale_probe binary that tests all problem types from 256 to 65536 elements
- Implement comprehensive progress reporting and detailed summary statistics
- Update time units from milliseconds to seconds throughout
- Add informative output explaining test results and metrics
- Update README with scale_probe documentation
- Extend all test scenarios to cover sizes: 8192, 16384, 32768, 65536

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,17 +28,19 @@ jobs:
       - name: Cargo check (MSRV)
         run: cargo check --workspace --all-targets
 
-  feature-builds:
-    name: Feature Builds
+  feature-checks:
+    name: Feature Checks
     strategy:
       matrix:
-        feature: [parallel, tracing]
+        features: [parallel, tracing, "parallel tracing"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-      - name: Build with feature
-        run: cargo build --workspace --features ${{ matrix.feature }}
+      - name: Run check script with features
+        env:
+          FEATURES: ${{ matrix.features }}
+        run: bash scripts/check.sh
 
   coverage:
     name: Coverage
